# intersection_detection

./: Cargo.toml  README.md
lib/point_like/: Cargo.toml
lib/point_like/src/: lib.rs
src/: lib.rs
