[package]
name = "intersection_detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.6.0"
num = "0.4.1"
point_like = { version = "0.1.0", path = "lib/point_like" }

[dev-dependencies]
rstest = "0.18.2"
