[package]
name = "point_like"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Bergholtz <cuppachino.dev@gmail.com>"]
description = "Traits for 2D point-like types."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.6.0"
num = "0.4.1"
