[package]
name = "point_like"
version = "0.1.1"
edition = "2021"
authors = ["Jacob Bergholtz <cuppachino.dev@gmail.com>"]
description = "Traits for 2D point-like types."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.6.0"
num = "0.4.1"
